# bose-qc-ultra-buy-it

./: README.md
src/bose-extract-deals/: Cargo.toml
src/bose-extract-deals/resources/: .gitignore
src/bose-extract-deals/src/: arguments.rs  database.rs  db_storage.rs  errors.rs  gmail_smtp.rs  html_extractor.rs  json_extractor.rs  main.rs  product_extractor.rs  structures.rs  temp_file_manager.rs  validate_deals.rs
