[package]
name = "bose-extract-deals"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["cookies", "json", "blocking"] }
thiserror = "2.0.6"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4.39", features = ["serde"] }
rusqlite = "0.32.1"
tempfile = "3.14.0"
dirs = "5.0.1"
clap = { version = "4.3", features = ["derive"] }
